# xkcd-comic-finder

./: .env.eg  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_tests.py  setup.py
data/comics/: comic_1.json
src/: utils_data_models.py  utils_load.py
src/database/: populate_db.py  weaviate_client.py
src/scraper/: run_scraper.py  scraper.py
src/search/: query.py
src/tsne/: build_tsne.py  setup_xkcd_theme.R  visualize_tsne.R  visualize_tsne.py
tests/: pytest.ini  run_tests.py  test_scraper.py
tests/fixtures/html/: comic_500.html
tests/fixtures/html/explainxkcd.com/: comic_505.html  comic_600.html
tests/fixtures/html/xkcd.com/: comic_500.html
