[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xkcd-comic-finder"
version = "0.2.0"
description = "A tool for finding XKCD comics"
authors = [{name = "lukerm", email = "lukerm@zl-labs.tech"}]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "beautifulsoup4~=4.11.1",
    "boto3~=1.38.44",
    "python-dotenv~=0.21.0",
    "requests~=2.28.1",
    "weaviate-client~=3.15.4",
]

[project.optional-dependencies]
test = [
    "coverage",
    "pytest",
    "pytest-cov",
]
tsne = [
    "numpy",
    "openai",
    "pandas",
    "scikit-learn",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*"]
